Refactorizo y corrijo alguna errata con las excepciones